# bellum

./: .cfignore  .cfpagesignore  .cloudflare-build-config.json  .cloudflare.md  .cursorrules-firebase.json  .eslintignore  .firebaserc  .gitignore  .gitmodules  .npmrc  .vercelignore  ADVANCED_STORAGE_IMPLEMENTATION.md  AI_IMPLEMENTATION_SUMMARY.md  AI_SETUP.md  ARCHITECTURE.md  BELLUM_NEXUS_COMPLETE_SUMMARY.md  BELLUM_NEXUS_FINAL_REPORT.md  BELLUM_NEXUS_FINAL_STATUS.md  BELLUM_NEXUS_QUICK_START.md  BELLUM_NEXUS_README.md  BUG_FIXES_SUMMARY.md  BUILD_FIXES.md  CHANGELOG.md  CLOUDFLARE_BUILD_FIX.md  CLOUDFLARE_BUILD_FIX_NODE_MODULES.md  CLOUDFLARE_DEPLOY.md  CLOUDFLARE_DEPLOY_COMMAND.md  CLOUDFLARE_DEPLOY_FIX.md  CLOUDFLARE_DEPLOY_SUCCESS.md  CLOUDFLARE_FINAL_FIX.md  CLOUDFLARE_FIX.md  CLOUDFLARE_HELLO_WORLD_FIX.md  CODE_EXECUTION.md  COMMUNITY.md  COMPLETE_ENHANCEMENT_SUMMARY.md  COMPONENT_SHOWCASE.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  DISCORD_STORAGE_ARCHITECTURE.md  DISCORD_STORAGE_IMPLEMENTATION.md  (+90 more)
.cloudflare/: pages.json
.firebase/: hosting.cHVibGlj.cache
app/: apple-icon.tsx  error.tsx  globals.css  icon.tsx  layout.tsx  not-found.tsx  page.tsx
backend/: .gitignore  Bellum.Backend.csproj  COMPILATION_SETUP.md  Program.cs  README.md  appsettings.json
components/: Account.tsx  AchievementToasts.tsx  AchievementsModal.tsx  AdCard.tsx  AetherLan.tsx  AppLibrary.tsx  AppRunner.tsx  AppShell.tsx  AppWindow.tsx  Archives.tsx  Desktop.tsx  (+41 more)
wasm/compression/: Cargo.toml
wasm/compression/src/: lib.rs
wasm/game-parser/: Cargo.toml
wasm/game-parser/src/: lib.rs
(+1620 files in other folders)
